--- a/Ejemplos/Edo/lib/memb.tex
+++ b/Ejemplos/Edo/lib/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textbf{Tarea \thetarea.} Ecuaciones diferenciales ordinarias
+        \textcolor{gray}{\textbf{Tarea \thetarea.} Ecuaciones diferenciales ordinarias}
     }
 }
 
