--- a/Ejemplos/Algebra/lib/envs.tex
+++ b/Ejemplos/Algebra/lib/envs.tex
@@ -24,22 +24,22 @@
 % \newcommand{\QED}{$\hfill\blacksquare$} % Pone el cuadrito negro hasta el final de la línea
 % \newcommand{\EndSol}{$\hfill\square$} % Cuadrito blanco al final al final de la línea
 
- 
 \renewenvironment{proof}[1][\textbf{\textit{Demostración}}]{
-    \par\medskip\noindent \textcolor[rgb]{0.2,0,0.6}{#1.}
-    \rmfamily
+     \par\medskip\noindent \textcolor[rgb]{0.2,0,0.6}{#1.}
+     \rmfamily
 }{
     \par
-    $\hfill\textcolor[rgb]{0.2,0,0.6}{\textbf{QED}}$\\
+    % $\hfill\textcolor[rgb]{0.2,0,0.6}{\textbf{QED}}$\\
+    $\hfill\textcolor[rgb]{0.2,0,0.6}{\blacksquare}$\\
 }
 
 \newenvironment{solution}[1][\textbf{\textit{Solución}}]{
-    \par\medskip\noindent \textcolor[rgb]{0.2,0,0.6}{#1.}
-    \rmfamily
+     \par\medskip\noindent \textcolor[rgb]{0.2,0,0.6}{#1.}
+     \rmfamily
 }{
     \par
-    $\hfill{\textcolor[rgb]{0.2,0,0.6}{\textbf{S}}}$\\
-    % $\hfill$\#\\
+    % $\hfill\textcolor[rgb]{0.2,0,0.6}{\textbf{S}}$\\
+    $\hfill\textcolor[rgb]{0.2,0,0.6}{\square}$\\
 }
 
 \renewenvironment{boxed} % [1][]
@@ -56,10 +56,12 @@
 
 \newcounter{problem}
 \newenvironment{problem}[1][\theproblem]{
-    \begin{tcolorbox}[colback=yellow!50,colframe=yellow!50]
+    \begin{tcolorbox}[colback=blue!50,colframe=blue!50]
         \refstepcounter{problem}
         % \par\medskip
         % \noindent 
+        % \color[rgb]{0.1,0.1,0.1}
+        % \color[rgb]{0.1,0,0.5}
         \textbf{Problema~#1.}
         \rmfamily
 }{
