--- a/Ejemplos/Conjuntos/lib/envs.tex
+++ b/Ejemplos/Conjuntos/lib/envs.tex
@@ -29,7 +29,8 @@
      \rmfamily
 }{
     \par
-    $\hfill\textcolor[rgb]{0.2,0,0.6}{\textbf{QED}}$\\
+    % $\hfill\textcolor[rgb]{0.2,0,0.6}{\textbf{QED}}$\\
+    $\hfill\textcolor[rgb]{0.2,0,0.6}{\blacksquare}$\\
 }
 
 \newenvironment{solution}[1][\textbf{\textit{Solución}}]{
@@ -37,7 +38,8 @@
      \rmfamily
 }{
     \par
-    $\hfill\textcolor[rgb]{0.2,0,0.6}{\textbf{S}}$\\
+    % $\hfill\textcolor[rgb]{0.2,0,0.6}{\textbf{S}}$\\
+    $\hfill\textcolor[rgb]{0.2,0,0.6}{\square}$\\
 }
 
 \renewenvironment{boxed} % [1][]
