wtf no tengo idea de qué cambios eran

--- a/Ejemplos/Edo/lib/envs.tex
+++ b/Ejemplos/Edo/lib/envs.tex
@@ -56,7 +56,7 @@
 
 \newcounter{problem}
 \newenvironment{problem}[1][\theproblem]{
-    \begin{tcolorbox}[colback=blue!50,colframe=blue!50]
+    \begin{tcolorbox}[colback=green!50,colframe=green!50]
         \refstepcounter{problem}
         % \par\medskip
         % \noindent 
