--- a/Ejemplos/Estadística/lib/envs.tex
+++ b/Ejemplos/Estadística/lib/envs.tex
@@ -56,7 +56,7 @@
 
 \newcounter{problem}
 \newenvironment{problem}[1][\theproblem]{
-    \begin{tcolorbox}[colback=blue!50,colframe=blue!50]
+    \begin{tcolorbox}[colback=orange!50,colframe=orange!50]
         \refstepcounter{problem}
         % \par\medskip
         % \noindent 
