Actualización de configuración de ejemplos y script crear archivos para ejercicios

--- a/Ejemplos/Algebra/AlgebraModerna-TareaX-JuanArmandoParraFlores.tex
+++ b/Ejemplos/Algebra/AlgebraModerna-TareaX-JuanArmandoParraFlores.tex
@@ -1,4 +1,5 @@
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
+\setlength{\parindent}{1cm}
 
 \input{lib/conf.tex}
 \input{lib/cmds.tex}
@@ -11,8 +12,9 @@
     \begin{center}
         \LARGE\titulo
     \end{center}
-    \vspace{1 mm}
+    % \vspace{1 mm}
     % ========================== EJERCICIOS ========================== 
+    \vspace{5mm}
     \input{ejercicios/ejercicio1}
     % ======================== FIN DE DOCUMENTO ======================
 \end{document}
