--- a/Ejemplos/Algebra/lib/conf.tex
+++ b/Ejemplos/Algebra/lib/conf.tex
@@ -1,7 +1,6 @@
 \usepackage[T1]{fontenc}
 \usepackage[
-    % margin=2cm
-    left=4cm,
+    left=7cm,
     right=2cm,
     top=2cm,
     bottom=3cm
@@ -11,6 +10,9 @@
     amsfonts,
     bbm
 }
+% Fuentes bonitas
+\usepackage{newpxtext,newpxmath}
+
 \usepackage{enumerate}
 % \usepackage{titling}
 % \usepackage{tipa}
@@ -34,7 +36,7 @@
 %% various useful mathematical symbols
 \usepackage{amssymb}
 %% extended theorem environments
-\usepackage{amsthm}
+% \usepackage{amsthm}
 
 
 % Section size
@@ -69,5 +71,5 @@
     \fancyhf{}
     \rhead{\fecha}
     \lhead{\autor}
-    \rfoot{Página \thepage}
+    \rfoot{\textit{\textbf{Página \thepage}}}
 
