--- a/Ejemplos/Algebra/lib/memb.tex
+++ b/Ejemplos/Algebra/lib/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textbf{Tarea \thetarea.} Álgebra Moderna
+        \textcolor[rgb]{0.6,0,0.3}{\textbf{Tarea \thetarea.} Álgebra Moderna}
     }
 }
 
