--- a/Ejemplos/Conjuntos/lib/memb.tex
+++ b/Ejemplos/Conjuntos/lib/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        {\textbf{Tarea \thetarea.} Teoría de Conjuntos}
+        \textcolor[rgb]{0.2,0,0.6}{\textbf{Tarea \thetarea.} Teoría de Conjuntos}
     }
 }
 
