--- a/Ejemplos/Edo/ParraJuan_TXEDO.tex
+++ b/Ejemplos/Edo/ParraJuan_TXEDO.tex
@@ -5,7 +5,7 @@
 \input{lib/memb.tex}
 \input{lib/envs.tex}
 
-\setcounter{tarea}{<++>}
+\setcounter{tarea}{8}
 
 \begin{document}
     \begin{center}
