--- a/Ejemplos/Edo/lib/memb.tex
+++ b/Ejemplos/Edo/lib/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textcolor{gray}{\textbf{Tarea \thetarea.} Ecuaciones diferenciales ordinarias}
+        \textcolor[rgb]{0,0.4,0}{\textbf{Tarea \thetarea.} Ecuaciones diferenciales ordinarias}
     }
 }
 
