--- a/Ejemplos/Calculo/lib/conf.tex
+++ b/Ejemplos/Calculo/lib/conf.tex
@@ -1,16 +1,18 @@
 \usepackage[T1]{fontenc}
 \usepackage[
-    % margin=2cm
-    left=2cm,
-    right=2cm,
-    top=2cm,
-    bottom=3cm
+    left = 4cm,
+    right = 4cm,
+    top = 2cm,
+    bottom = 3cm
 ]{geometry}
 \usepackage{
     amsmath,
     amsfonts,
     bbm
 }
+% Fuentes bonitas
+\usepackage{newpxtext,newpxmath}
+
 \usepackage{enumerate}
 % \usepackage{titling}
 % \usepackage{tipa}
@@ -34,7 +36,7 @@
 %% various useful mathematical symbols
 \usepackage{amssymb}
 %% extended theorem environments
-\usepackage{amsthm}
+% \usepackage{amsthm}
 
 
 % Section size
@@ -69,5 +71,5 @@
     \fancyhf{}
     \rhead{\fecha}
     \lhead{\autor}
-    \rfoot{Página \thepage}
+    \rfoot{\textit{\textbf{Página \thepage}}}
 
