--- a/Ejemplos/Calculo/lib/memb.tex
+++ b/Ejemplos/Calculo/lib/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        {\textbf{Tarea \thetarea.} Calculo diferencial e integral IV}
+        \textcolor[rgb]{0.6,0,0}{\textbf{Tarea \thetarea.} Cálculo diferencial e integral IV}
     }
 }
 
