--- a/Ejemplos/Conjuntos/lib/envs.tex
+++ b/Ejemplos/Conjuntos/lib/envs.tex
@@ -24,7 +24,8 @@
 % \newcommand{\QED}{$\hfill\blacksquare$} % Pone el cuadrito negro hasta el final de la línea
 % \newcommand{\EndSol}{$\hfill\square$} % Cuadrito blanco al final al final de la línea
 
-\renewenvironment{proof}[1][\textbf{\textit{Demostración}}]{
+% \renewenvironment{proof}[1][\textbf{\textit{Demostración}}]{
+\newenvironment{proof}[1][\textbf{\textit{Demostración}}]{
      \par\medskip\noindent \textcolor[rgb]{0.2,0,0.6}{#1.}
      \rmfamily
 }{
@@ -56,7 +57,7 @@
 
 \newcounter{problem}
 \newenvironment{problem}[1][\theproblem]{
-    \begin{tcolorbox}[colback=blue!50,colframe=blue!50]
+    \begin{tcolorbox}[colback=blue!20,colframe=blue!50]
         \refstepcounter{problem}
         % \par\medskip
         % \noindent 
