--- a/Ejemplos/Edo/lib/conf.tex
+++ b/Ejemplos/Edo/lib/conf.tex
@@ -1,8 +1,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[
-    % margin=2cm
-    left=2cm,
-    right=2cm,
+    left=3.5cm,
+    right=3.5cm,
     top=2cm,
     bottom=3cm
 ]{geometry}
@@ -11,42 +10,8 @@
     amsfonts,
     bbm
 }
-
-\usepackage[
-    font=small,
-    labelfont=bf,
-    tableposition=top
-]{caption}
-    \DeclareCaptionLabelFormat{andtable}{#1~#2  \&  \tablename~\thetable}
-
-% Listings
-\usepackage{listings}
-\usepackage{xcolor}
-
-\definecolor{codegreen}{rgb}{0,0.6,0}
-\definecolor{codegray}{rgb}{0.5,0.5,0.5}
-\definecolor{codepurple}{rgb}{0.58,0,0.82}
-\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
-
-\lstdefinestyle{mystyle}{
-    backgroundcolor=\color{backcolour},
-    commentstyle=\color{codegreen},
-    keywordstyle=\color{magenta},
-    numberstyle=\tiny\color{codegray},
-    stringstyle=\color{codepurple},
-    basicstyle=\ttfamily\footnotesize,
-    breakatwhitespace=false,
-    breaklines=true,
-    captionpos=b,
-    keepspaces=true,
-    numbers=left,
-    numbersep=5pt,
-    showspaces=false,
-    showstringspaces=false,
-    showtabs=false,
-    tabsize=2
-}
-\lstset{style=mystyle}
+% Fuentes bonitas
+\usepackage{newpxtext,newpxmath}
 
 \usepackage{enumerate}
 % \usepackage{titling}
@@ -71,7 +36,7 @@
 %% various useful mathematical symbols
 \usepackage{amssymb}
 %% extended theorem environments
-\usepackage{amsthm}
+% \usepackage{amsthm}
 
 
 % Section size
