--- a/Ejemplos/Estadística/lib/conf.tex
+++ b/Ejemplos/Estadística/lib/conf.tex
@@ -1,8 +1,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[
-    % margin=2cm
-    left=2cm,
-    right=2cm,
+    left=3.5cm,
+    right=3.5cm,
     top=2cm,
     bottom=3cm
 ]{geometry}
@@ -11,6 +10,9 @@
     amsfonts,
     bbm
 }
+% Fuentes bonitas
+\usepackage{newpxtext,newpxmath}
+
 \usepackage{enumerate}
 % \usepackage{titling}
 % \usepackage{tipa}
@@ -34,7 +36,7 @@
 %% various useful mathematical symbols
 \usepackage{amssymb}
 %% extended theorem environments
-\usepackage{amsthm}
+% \usepackage{amsthm}
 
 
 % Section size
