--- a/Ejemplos/Calculo/TareaX-JuanArmandoParraFlores.tex
+++ b/Ejemplos/Calculo/TareaX-JuanArmandoParraFlores.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 
 \input{lib/conf.tex}
 \input{lib/cmds.tex}
@@ -13,6 +13,6 @@
     \end{center}
     \vspace{1 mm}
     % ========================== EJERCICIOS ========================== 
-    \input{ejercicios/ejercicio1}
+    \input{ejercicios/sec<++>/ej<++>}
     % ======================== FIN DE DOCUMENTO ======================
 \end{document}
