--- a/Ejemplos/Algebra/AlgebraModerna-TareaX-JuanArmandoParraFlores.tex
+++ b/Ejemplos/Algebra/AlgebraModerna-TareaX-JuanArmandoParraFlores.tex
@@ -1,20 +1,17 @@
 \documentclass[12pt]{article}
-\setlength{\parindent}{1cm}
 
 \input{lib/conf.tex}
 \input{lib/cmds.tex}
 \input{lib/memb.tex}
 \input{lib/envs.tex}
 
-\setcounter{tarea}{<++>}
+\setcounter{tarea}{9}
 
 \begin{document}
     \begin{center}
         \LARGE\titulo
     \end{center}
-    % \vspace{1 mm}
     % ========================== EJERCICIOS ========================== 
-    \vspace{5mm}
-    \input{ejercicios/ejercicio1}
+    \input{ejercicios/secGen/ej<++>}
     % ======================== FIN DE DOCUMENTO ======================
 \end{document}
