--- a/Ejemplos/Calculo/lib/envs.tex
+++ b/Ejemplos/Calculo/lib/envs.tex
@@ -1,45 +1,26 @@
 % Definiciones de teoremas, definiciones...
 
-% \newtheorem{axiom}{Axioma}
-% \theoremstyle{definition}
-% \newtheorem{definition}{Definición}[section]
-% \newtheorem{theorem}{Teorema}[section]
-% \newtheorem{lemma}{Lema}[section]
-% \newtheorem{corollary}[theorem]{Corolario}
-% \newtheorem{proposition}[theorem]{Proposición}
-% \theoremstyle{remark}
-% \newtheorem*{note}{\bfseries Nota}
-% 
-% \crefname{definition}{Definición}{Definiciones}
-% \crefname{axiom}{Axioma}{Axiomas}
-% \crefname{theorem}{Teorema}{Teoremas}
-% \crefname{lemma}{Lema}{Lemas}
-% \crefname{corollary}{Corolario}{Corolarios}
-% \crefname{proposition}{Proposición}{Proposiciones}
-% \crefname{section}{Sección}{Secciones}
-% 
 % \newenvironment{solution}{\begin{proof}[Solución]}{\end{proof}}
 % \renewcommand{\qedsymbol}{$\blacksquare$}
 % 
 % \newcommand{\QED}{$\hfill\blacksquare$} % Pone el cuadrito negro hasta el final de la línea
 % \newcommand{\EndSol}{$\hfill\square$} % Cuadrito blanco al final al final de la línea
 
+% \renewenvironment{proof}[1][\textbf{\textit{Demostración}}]{
 \newenvironment{proof}[1][\textbf{\textit{Demostración}}]{
-     \par\medskip\noindent \textcolor[rgb]{0.6,0,0}{#1.}
-     \rmfamily
+    \par\medskip\noindent \textcolor{rojo1}{#1.}
+    \rmfamily
 }{
-    \par
-    % $\hfill\textcolor[rgb]{0.2,0,0.6}{\textbf{QED}}$\\
-    $\hfill\textcolor[rgb]{0.6,0,0}{\blacksquare}$\\
+    $\hfill\textcolor{rojo1}{\blacksquare}$\\
+    \medskip
 }
 
 \newenvironment{solution}[1][\textbf{\textit{Solución}}]{
-     \par\medskip\noindent \textcolor[rgb]{0.6,0,0}{#1.}
-     \rmfamily
+    \par\medskip\noindent \textcolor{rojo1}{#1.}
+    \rmfamily
 }{
-    \par
-    % $\hfill\textcolor[rgb]{0.2,0,0.6}{\textbf{S}}$\\
-    $\hfill\textcolor[rgb]{0.6,0,0}{\square}$\\
+    $\hfill\textcolor{rojo1}{\square}$\\
+    \medskip
 }
 
 \renewenvironment{boxed} % [1][]
@@ -56,12 +37,10 @@
 
 \newcounter{problem}
 \newenvironment{problem}[1][\theproblem]{
-    \begin{tcolorbox}[colback=red!20,colframe=red!50]
+    \begin{tcolorbox}[colback=red!20,colframe=red!50,before upper={\parindent15pt},breakable]
         \refstepcounter{problem}
         % \par\medskip
-        % \noindent 
-        % \color[rgb]{0.1,0.1,0.1}
-        % \color[rgb]{0.1,0,0.5}
+        \noindent 
         \textbf{Problema~#1.}
         \rmfamily
 }{
