--- a/Ejemplos/Edo/ParraJuan_TXEDO.tex
+++ b/Ejemplos/Edo/ParraJuan_TXEDO.tex
@@ -1,18 +1,19 @@
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 
 \input{lib/conf.tex}
 \input{lib/cmds.tex}
 \input{lib/memb.tex}
 \input{lib/envs.tex}
 
-\setcounter{tarea}{8}
+\setcounter{tarea}{<++>}
 
 \begin{document}
+    \setlength\parindent{1cm}
     \begin{center}
         \LARGE\titulo
     \end{center}
     \vspace{1 mm}
     % ========================== EJERCICIOS ========================== 
-    \input{ejercicios/ejercicio1}
+    \input{ejercicios/secGen/ej<++>}
     % ======================== FIN DE DOCUMENTO ======================
 \end{document}
