--- a/Ejemplos/Estadística/TareaX-JuanArmandoParraFlores.tex
+++ b/Ejemplos/Estadística/TareaX-JuanArmandoParraFlores.tex
@@ -5,7 +5,7 @@
 \input{lib/memb.tex}
 \input{lib/envs.tex}
 
-\setcounter{tarea}{8}
+\setcounter{tarea}{7}
 
 \begin{document}
     \begin{center}
@@ -13,6 +13,6 @@
     \end{center}
     \vspace{1 mm}
     % ========================== EJERCICIOS ========================== 
-    \input{ejercicios/ejercicio1}
+    \input{ejercicios/sec1/<++>}
     % ======================== FIN DE DOCUMENTO ======================
 \end{document}
