--- a/Ejemplos/Estadística/lib/memb.tex
+++ b/Ejemplos/Estadística/lib/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textbf{Tarea \thetarea.} Métodos Estadísticos
+        \textcolor{naranja1}{\textbf{Tarea \thetarea.} Métodos estadísticos}
     }
 }
 
