Listos los scripts

--- a/Ejemplos/topologia-I/main.tex
+++ b/Ejemplos/topologia-I/main.tex
@@ -3,6 +3,7 @@
 \input{lib/conf.tex}
 \input{lib/cmds.tex}
 \input{lib/memb.tex}
+\input{lib/mth-envs.tex}
 \input{lib/envs.tex}
 
 \setcounter{tarea}{9}
@@ -12,6 +13,6 @@
         \LARGE\titulo
     \end{center}
     % ========================== EJERCICIOS ==========================
-    \input{ejercicios/secGen/ej1}
+    \input{ejercicios/tree}
     % ======================== FIN DE DOCUMENTO ======================
 \end{document}
