--- a/Ejemplos/topologia-I/lib/envs.tex
+++ b/Ejemplos/topologia-I/lib/envs.tex
@@ -1,57 +1,13 @@
-% --------- Definiciones de teoremas, definiciones, axiomas, problemas...
-
-\definecolor{tscolor}{rgb}{0.6,0,0.3}
-\newcommand{\tscolor}{purple}
-
-\newenvironment{proof}[1][\textbf{\textit{Demostración}}]{
-     \par\medskip\noindent
-     \textcolor{tscolor}{#1.}
-     \rmfamily
+\newenvironment{Itemize}{
+    \begin{itemize}
+    \setlength\parindent{0.5cm}
 }{
-    $\hfill\textcolor[rgb]{0.6,0,0.3}{\blacksquare}$\\
+    \end{itemize}
 }
 
-\newenvironment{solution}[1][\textbf{\textit{Solución}}]{
-     \par\medskip\noindent
-     \textcolor{tscolor}{#1.}
-     \rmfamily
+\newenvironment{Enumerate}[1][]{
+    \begin{enumerate}[#1]
+    \setlength\parindent{0.5cm}
 }{
-    $\hfill\textcolor{tscolor}{\square}$\\
-}
-
-\newcounter{problem}
-\newenvironment{problem}[1][\theproblem]{
-    \begin{tcolorbox}[colback=\tscolor!20,colframe=\tscolor!50]
-        \refstepcounter{problem}
-        \textbf{Problema~#1.}
-        \rmfamily
-}{
-    \end{tcolorbox}
-    \medskip
-}
-
-\newcounter{lemma}
-\newenvironment{lemma}[1][\thelemma]{
-    \begin{tcolorbox}[colback=white!20,colframe=\tscolor!50]
-        \refstepcounter{lemma}
-        \noindent
-        \color[rgb]{0.6,0,0.3}
-        \textbf{Lema~#1.}
-        \rmfamily
-}{
-    \end{tcolorbox}
-    \medskip
-}
-
-\newcounter{theorem}
-\newenvironment{theorem}[1][\thetheorem]{
-    \begin{tcolorbox}[colback=white!20,colframe=\tscolor!50]
-        \refstepcounter{theorem}
-        \par\medskip
-        \noindent
-        \textbf{Teorema~#1.}
-        \rmfamily
-}{
-    \end{tcolorbox}
-    \medskip
+    \end{enumerate}
 }
