--- a/Ejemplos/topologia-I/tex/lib/mth-envs.tex
+++ b/Ejemplos/topologia-I/tex/lib/mth-envs.tex
@@ -8,7 +8,7 @@
      \textcolor{tscolor}{#1.}
      \rmfamily
 }{
-    $\hfill\textcolor[rgb]{0.6,0,0.3}{\blacksquare}$\\
+    $\hfill\textcolor{tscolor}{\blacksquare}$\\
 }
 
 \newenvironment{solution}[1][\textbf{\textit{Solución}}]{
