--- a/Ejemplos/topologia-I/tex/lib/conf.tex
+++ b/Ejemplos/topologia-I/tex/lib/conf.tex
@@ -67,11 +67,33 @@
     % Colores
 
 \usepackage[dvipsnames]{xcolor}
-    
+    \definecolor{topologia-I}{RGB}{140,90,5}
+    \definecolor{analisis-matematico-I}{RGB}{175,5,45}
+    \definecolor{metodos-numericos}{RGB}{125,125,125}
+    \definecolor{ecuaciones-diferenciales-parciales-I}{RGB}{10,155,25}
+
+    \colorlet{tscolor}{topologia-I}
+
     % Cajas con colores
 
 \usepackage{tcolorbox}
+        % -- analisis-matematico-I --
+    \newcommand{\tscolbanalisis}{purple!70!orange!30}
+    \newcommand{\tscolfanalisis}{purple!90!orange!90}
+        % -- topologia-I --
+    \newcommand{\tscolbtopologia}{brown!80!orange!20}
+    \newcommand{\tscolftopologia}{brown!100!purple!80!black!95}
+        % -- metodos-numericos-I --
+    \newcommand{\tscolbmetodos}{gray!80!gray!20}
+    \newcommand{\tscolfmetodos}{gray!80!black!90}
+        % -- ecuaciones-diferenciales-parciales-I --
+    \newcommand{\tscolbedp}{green!80!blue!30}
+    \newcommand{\tscolfedp}{green!90!blue!70!black!95}
 
+    \newcommand{\tscolback}{\tscolbtopologia}
+    \newcommand{\tscolframe}{\tscolftopologia}
+
+% ---- Fancyhdr para header -----
 
 \usepackage{fancyhdr}
 
@@ -83,5 +105,8 @@
     \lhead{\autor}
     \rfoot{\textit{\textbf{Página \thepage}}}
 
+% ----- parindent para tamño de indentación -----
 
 \setlength\parindent{0.5cm}
+
+
