--- a/Ejemplos/topologia-I/tex/lib/memb.tex
+++ b/Ejemplos/topologia-I/tex/lib/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textcolor[rgb]{0.6,0,0.3}{\textbf{Tarea \thetarea.} Topología I}
+        \textcolor{tscolor}{\textbf{Tarea \thetarea.} Topología I}
     }
 }
 
