--- a/Ejemplos/topologia-I/tex/main.tex
+++ b/Ejemplos/topologia-I/tex/main.tex
@@ -6,12 +6,13 @@
 \input{lib/mth-envs.tex}
 \input{lib/envs.tex}
 
-\setcounter{tarea}{9}
+\setcounter{tarea}{1}
 
 \begin{document}
     \begin{center}
         \LARGE\titulo
     \end{center}
+    \vspace{1mm}
     % ========================== EJERCICIOS ==========================
     \input{ejercicios/tree}
     % ======================== FIN DE DOCUMENTO ======================
