--- a/Ejemplos/ecuaciones-diferenciales-parciales-I/tex/lib/memb.tex
+++ b/Ejemplos/ecuaciones-diferenciales-parciales-I/tex/lib/memb.tex
@@ -1,6 +1,7 @@
 \newcommand{\titulo}{
     \textsc{
-        \textcolor[rgb]{0.6,0,0.3}{\textbf{Tarea \thetarea.} Topología I}
+        \textcolor{tscolor}{\textbf{Tarea \thetarea.}
+        Ecuaciones Diferenciales Parciales I}
     }
 }
 
