Uniformización del estilo

--- a/Ejemplos/ecuaciones-diferenciales-parciales-I/tex/lib/memb.tex
+++ b/Ejemplos/ecuaciones-diferenciales-parciales-I/tex/lib/memb.tex
@@ -1,7 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textcolor{tscolor}{\textbf{Tarea \thetarea.}
-        Ecuaciones Diferenciales Parciales I}
+        \textcolor{tscolor}{\textbf{Tarea \thetarea.} Ecuaciones Diferenciales Parciales I}
     }
 }
 
