--- a/Ejemplos/ecuaciones-diferenciales-parciales-I/tex/main.tex
+++ b/Ejemplos/ecuaciones-diferenciales-parciales-I/tex/main.tex
@@ -1,10 +1,14 @@
-\documentclass[12pt]{article}
+\documentclass[
+    12pt,
+    a4paper
+]{article}
 
 \input{lib/conf.tex}
 \input{lib/cmds.tex}
 \input{lib/memb.tex}
 \input{lib/mth-envs.tex}
 \input{lib/envs.tex}
+\input{lib/col.tex}
 
 \setcounter{tarea}{<++>}
 
