--- a/Ejemplos/topologia-I/tex/main.tex
+++ b/Ejemplos/topologia-I/tex/main.tex
@@ -1,12 +1,16 @@
-\documentclass[12pt]{article}
+\documentclass[
+    12pt,
+    a4paper
+]{article}
 
 \input{lib/conf.tex}
 \input{lib/cmds.tex}
 \input{lib/memb.tex}
 \input{lib/mth-envs.tex}
 \input{lib/envs.tex}
+\input{lib/col.tex}
 
-\setcounter{tarea}{1}
+\setcounter{tarea}{<++>}
 
 \begin{document}
     \begin{center}
