--- a/Ejemplos/analisis-matematico-I/tex/lib/cmds.tex
+++ b/Ejemplos/analisis-matematico-I/tex/lib/cmds.tex
@@ -30,6 +30,19 @@
     \mathbb{F}
 }
 
+    % Topología
+
+\newcommand{\Fr}{
+    \mathrm{Fr}\,
+}
+
+\newcommand{\cl}[1]{
+    \overline{#1}
+}
+\newcommand{\interior}{
+    \mathrm{int}\,
+}
+
     % Conjuntos asociados a funciones
 
 \newcommand{\im}[1]{    % Imagen de una función
@@ -145,4 +158,9 @@
     \varepsilon
 }
 
-
+\newcommand{\uphi}{
+    \phi
+}
+\renewcommand{\phi}{
+    \varphi
+}
