--- a/Ejemplos/ecuaciones-diferenciales-parciales-I/tex/lib/memb.tex
+++ b/Ejemplos/ecuaciones-diferenciales-parciales-I/tex/lib/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textcolor{tscolor}{\textbf{Tarea \thetarea.} Ecuaciones Diferenciales Parciales I}
+        \textcolor{tscolor}{\textbf{Lista \thelista}, \textbf{parte \thetarea.} Ecuaciones Diferenciales Parciales I}
     }
 }
 
