--- a/Ejemplos/analisis-matematico-I/tex/lib/col.tex
+++ b/Ejemplos/analisis-matematico-I/tex/lib/col.tex
@@ -4,8 +4,8 @@
 
 \usepackage[dvipsnames]{xcolor}
     % \definecolor{topologia-I}{RGB}{140,90,5}
-    % \definecolor{analisis-matematico-I}{RGB}{245,127,23}
-    \definecolor{metodos-numericos}{RGB}{125,125,125}
+    \definecolor{analisis-matematico-I}{RGB}{245,127,23}
+    % \definecolor{metodos-numericos}{RGB}{125,125,125}
     % \definecolor{ecuaciones-diferenciales-parciales-I}{RGB}{48,88,79}
 
     \colorlet{tscolor}{analisis-matematico-I}
