--- a/Ejemplos/conmutativa/col.tex
+++ b/Ejemplos/conmutativa/col.tex
@@ -3,7 +3,7 @@
     % Colores
 
 \usepackage[dvipsnames]{xcolor}
-    \definecolor{conmutativa}{RGB}{125,125,125}
+    \definecolor{conmutativa}{RGB}{230,175,60}
 
     \colorlet{tscolor}{conmutativa}
 
@@ -11,8 +11,8 @@
 
 \usepackage{tcolorbox}
         % -- metodos-numericos-I --
-    \newcommand{\tscolbconmutativa}{gray!80!gray!20}
-    \newcommand{\tscolfconmutativa}{gray!80!black!90}
+    \newcommand{\tscolbconmutativa}{yellow!70!orange!30}
+    \newcommand{\tscolfconmutativa}{yellow!70!red!90!black!95}
 
     \newcommand{\tscolback}{ \tscolbconmutativa}
     \newcommand{\tscolframe}{\tscolfconmutativa}
