--- a/examples/analisis-II/col.tex
+++ b/examples/analisis-II/col.tex
@@ -3,15 +3,15 @@
     % Colores
 
 \usepackage[dvipsnames]{xcolor}
-    \definecolor{analisis}{RGB}{205,110,10}
+    \definecolor{analisis}{RGB}{0,0,0}
     \colorlet{tscolor}{analisis}
 
     % Cajas con colores
 
 \usepackage{tcolorbox}
         % -- analisis-II --
-    \newcommand{\tscolbanalisis}{orange!80!orange!20}
-    \newcommand{\tscolfanalisis}{orange!100!purple!80!black!95}
+    \newcommand{\tscolbanalisis}{white!100}
+    \newcommand{\tscolfanalisis}{tscolor}
 
     \newcommand{\tscolback}{ \tscolbanalisis}
     \newcommand{\tscolframe}{\tscolfanalisis}
