--- a/examples/organica/memb.tex
+++ b/examples/organica/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textcolor{tscolor}{\textbf{Tarea \thetarea.} Geometría Hiperbólica}
+        \textcolor{tscolor}{\textbf{Tarea \thetarea.} Química Orgánica}
     }
 }
 
