--- a/examples/geodif/memb.tex
+++ b/examples/geodif/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textcolor{tscolor}{\textbf{Tarea \thetarea.} Álgebra Conmutativa}
+        \textcolor{tscolor}{\textbf{Tarea \thetarea.} Geometría Diferencial}
     }
 }
 
