--- a/examples/moderna/memb.tex
+++ b/examples/moderna/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textcolor{tscolor}{\textbf{Tarea \thetarea.} Análisis Matemático II}
+        \textcolor{tscolor}{\textbf{Tarea \thetarea.} Álgebra Moderna II}
     }
 }
 
