--- a/examples/tcompu/memb.tex
+++ b/examples/tcompu/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textcolor{tscolor}{\textbf{Tarea \thetarea.} Variable Compleja}
+        \textcolor{tscolor}{\textbf{Tarea \thetarea.} Teoría de la Computación e Inteligencia Artificial}
     }
 }
 
