--- a/examples/.comun/tex/lib/conf.tex
+++ b/examples/.comun/tex/lib/conf.tex
@@ -2,8 +2,8 @@
 \usepackage[
     left=2.5cm,
     right=2.5cm,
-    top=2.5cm,
-    bottom=3cm
+    top=2.0cm,
+    bottom=2.0cm
     % textwidth=18cm,
     % textheight=22cm,
 ]{geometry}
@@ -12,17 +12,19 @@
     amsfonts,
     bbm
 }
-% Fuentes bonitas
-\usepackage{newpxtext,newpxmath}
-
 \usepackage{enumerate}
+
+\usepackage[spanish]{babel}
+
+\usepackage{tikz}
+\usetikzlibrary{cd}
+\usetikzlibrary{babel}
+
 % \usepackage{titling}
 % \usepackage{tipa}
 \usepackage[utf8]{inputenc}
-\usepackage[spanish, mexico]{babel}
 % \usepackage{csquotes}
 % \usepackage{amsbsy}
-\usepackage[spanish]{babel}
 \usepackage{datetime}
 % \usepackage{natbib}
 % \usepackage{dsfont} 
@@ -36,7 +38,7 @@
 %% includegraphics command.
 \usepackage{graphicx}
 %% various useful mathematical symbols
-% \usepackage{amssymb}
+\usepackage{amssymb}
 %% extended theorem environments
 % \usepackage{amsthm}
 
@@ -75,10 +77,10 @@
     \fancyhf{}
     \rhead{\fecha}
     \lhead{\autor}
-    \rfoot{\textit{\textbf{Página \thepage}}}
+    \rfoot{\textit{\textbf{Pág. \thepage}}}
 
 % ----- parindent para tamño de indentación -----
 
-\setlength\parindent{0.5cm}
+\setlength\parindent{1.2cm}
 
 
