--- a/examples/anfun/col.tex
+++ b/examples/anfun/col.tex
@@ -2,7 +2,7 @@
 
     % Colores
 
-\usepackage[dvipsnames]{xcolor}
+% \usepackage[dvipsnames]{xcolor}
     \definecolor{analisis}{RGB}{0,0,0}
     \colorlet{tscolor}{analisis}
 
@@ -10,7 +10,7 @@
 
 \usepackage{tcolorbox}
         % -- analisis-II --
-    \newcommand{\tscolbanalisis}{white!100}
+    \newcommand{\tscolbanalisis}{black!5}
     \newcommand{\tscolfanalisis}{tscolor}
 
     \newcommand{\tscolback}{ \tscolbanalisis}
