--- a/examples/anfun/memb.tex
+++ b/examples/anfun/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textcolor{tscolor}{\textbf{Tarea \thetarea.} Química Orgánica}
+        \textcolor{tscolor}{\textbf{\tema.} Análisis Funcional}
     }
 }
 
