--- a/examples/galg/memb.tex
+++ b/examples/galg/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textcolor{tscolor}{\textbf{Tarea \thetarea.} Álgebra Moderna II}
+        \textcolor{tscolor}{\textbf{\tema.} Geometría Algebraica}
     }
 }
 
