--- a/examples/riem/memb.tex
+++ b/examples/riem/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textcolor{tscolor}{\textbf{Tarea \thetarea.} Geometría Diferencial}
+        \textcolor{tscolor}{\textbf{\tema.} Geometría Riemanniana}
     }
 }
 
