--- a/examples/topoa/memb.tex
+++ b/examples/topoa/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textcolor{tscolor}{\textbf{Tarea \thetarea.} Teoría de la Computación e Inteligencia Artificial}
+        \textcolor{tscolor}{\textbf{\tema.} Topología Aplicada}
     }
 }
 
