--- a/examples/.comun/tex/main.tex
+++ b/examples/.comun/tex/main.tex
@@ -4,12 +4,14 @@
 ]{article}
 
 \input{lib/conf.tex}
+\input{lib/fonts.tex}
 \input{lib/cmds.tex}
 \input{lib/memb.tex}
+\input{lib/boxes.tex}
 \input{lib/mth-envs.tex}
 \input{lib/col.tex}
 
-\setcounter{tarea}{<++>}
+\newcommand{\tema}{Tarea <++>}
 
 \begin{document}
     \begin{center}
@@ -18,5 +20,5 @@
     \vspace{1mm}
     % ========================== EJERCICIOS ==========================
     \input{ejercicios/tree}
-    % ======================== FIN DE DOCUMENTO ======================
+	% ======================== FIN DE DOCUMENTO ======================
 \end{document}
