Edición de las materias del semestre

--- a/examples/probav/memb.tex
+++ b/examples/probav/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textcolor{tscolor}{\textbf{\tema.} Análisis Funcional}
+        \textcolor{tscolor}{\textbf{\tema.} Probabilidad Avanzada}
     }
 }
 
