--- a/examples/macro/memb.tex
+++ b/examples/macro/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textcolor{tscolor}{\textbf{\tema.} Probabilidad Avanzada}
+        \textcolor{tscolor}{\textbf{\tema.} Macroeconomía}
     }
 }
 
