--- a/examples/.comun/tex/lib/cmds.tex
+++ b/examples/.comun/tex/lib/cmds.tex
@@ -61,6 +61,11 @@
     \mathrm{span} \,
 }
 
+\newcommand{\traza}[1]{
+	\textbf{traza}
+	\left( #1 \right) 
+}
+
 % ------- Funciones -------
 
     % Normas
@@ -104,7 +109,7 @@
 
     % dimensiones de Álgebra Lineal
 
-\renewcommand{\dim}[2][]{   % Dimensión
+\renewcommand{\dim}{   % Dimensión
     \mathrm{dim} \,
 }
 \newcommand{\rango}[1]{ % Rango (dimensión del espacio imagen)
@@ -163,4 +168,17 @@
 }
 \renewcommand{\phi}{
     \varphi
+}
+
+% ----- Operadores diferenciales ------
+
+\newcommand{\Cinf}{
+	\mathcal{C}^\infty
+}
+
+\renewcommand{\div}{
+	\textbf{div}\,
+}
+\newcommand{\grad}{
+	\textbf{grad}\,
 }
