--- a/examples/moderna/memb.tex
+++ b/examples/moderna/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textcolor{tscolor}{\textbf{\tema.} Macroeconomía}
+        \textcolor{tscolor}{\textbf{\tema.} Álgebra Moderna}
     }
 }
 
