--- a/examples/topo/memb.tex
+++ b/examples/topo/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textcolor{tscolor}{\textbf{\tema.} Geometría Algebraica}
+        \textcolor{tscolor}{\textbf{\tema.} Topología}
     }
 }
 
