--- a/examples/geo/memb.tex
+++ b/examples/geo/memb.tex
@@ -1,6 +1,6 @@
 \newcommand{\titulo}{
     \textsc{
-        \textcolor{tscolor}{\textbf{\tema.} Geometría Riemanniana}
+        \textcolor{tscolor}{\textbf{\tema.} Geometría de Haces}
     }
 }
 
